<resources>
    <string name="app_name">Calculator</string>
    <string name="default_display_text">0</string>
    <string name="negative_sign">-</string>
    <string name="invalid_input">Invalid</string>
    <string name="error_divide_by_zero">Error</string>

    <!-- Button Labels -->
    <string name="clear">C</string>
    <string name="sq_root">√</string>
    <string name="plus_minus">±</string>
    <string name="delete">⌫</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">−</string>
    <string name="add">+</string>
    <string name="equal">=</string>

    <!-- Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
</resources>
